compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_alias_discriminant_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type c : char\nvar d : c\ncase c of label 'c': end case\n"

---
"c"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"d"@(FileId(1), 18..19) [Declared]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 29..30: cannot use `c` as an expression
| error in file FileId(1) for 29..30: `c` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `c` declared here
