compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_alias_selector_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type c : char\nconst k : c := 'c'\ncase 'k' of label k: end case\n"
---
"c"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"k"@(FileId(1), 20..21) [ConstVar(Const, No)]: alias[DefId(LibraryId(0), LocalDefId(0))] of char
"<root>"@(dummy) [Module(No)]: <error>

