compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_coerced_discrim_select_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "case 'c' of label \"c\": end case"

---
"<root>"@(dummy) [Declared]: <error>

