compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_mismatch_discrim_select_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "case 'c' of label 123, 'dd', false end case"

---
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 18..21: mismatched types
| note in file FileId(1) for 18..21: this is of type `{integer}`
| note in file FileId(1) for 5..8: discriminant is of type `char`
| info: `{integer}` is not a `char`
| info: selector type must match discriminant type
error in file FileId(1) at 23..27: mismatched types
| note in file FileId(1) for 23..27: this is of type `char(2)`
| note in file FileId(1) for 5..8: discriminant is of type `char`
| info: `char(2)` is not a `char`
| info: selector type must match discriminant type
error in file FileId(1) at 29..34: mismatched types
| note in file FileId(1) for 29..34: this is of type `boolean`
| note in file FileId(1) for 5..8: discriminant is of type `char`
| info: `boolean` is not a `char`
| info: selector type must match discriminant type
