compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_non_comptime_selector_expr.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 41
expression: "var k : int\ncase 1 of label k + 1: end case\n"

---
"k"@(FileId(1), 4..5) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 28..29: cannot compute `k` at compile-time
| error in file FileId(1) for 28..29: `k` is a reference to a variable, not a constant
| note in file FileId(1) for 4..5: `k` declared here
