compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_normal_discriminant_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "case 1 of label 1: end case\ncase 'c' of label 'c': end case\ncase true of label true: end case\ncase \"a\" of label \"a\": end case\n"

---
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 46..49: literal is currently not implemented for compile-time evaluation
error in file FileId(1) at 112..115: literal is currently not implemented for compile-time evaluation
